lessons/day25/code/security_groups.tf

# Security Group for EC2 Instance
resource "aws_security_group" "app_sg" {
  name        = "test-demo-sg"
  description = "test-demo-sg"
  vpc_id      = data.aws_vpc.selected.id

  ingress {
    description = ""
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description     = ""
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description     = ""
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = ""
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "managed_by": "Terraform"
  }

}

resource "aws_instance" "app_instance" {
  ami                         = "ami-0b6c6ebed2801a5cb"
  instance_type               = "t3.micro"
  vpc_security_group_ids      = [aws_security_group.app_sg.id]
  associate_public_ip_address = true
  tags = {
    "Name" = "test-demo-ec2"
  }
}
